product quick view price moved above add to cart button, Checkout new billing reset form

--- a/app/design/frontend/creo/default/template/magpassion_quickview/quickview/catalog/product/view.phtml
+++ b/app/design/frontend/creo/default/template/magpassion_quickview/quickview/catalog/product/view.phtml
@@ -60,7 +60,7 @@
    
       <?php if ($_product->isSaleable() && $this->hasOptions()):?>
       <?php echo $this->getChildChildHtml('container1', '', true, true) ?>
-      <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(),true,false); ?></span>
+     <!-- <span class="price"><?php //echo Mage::helper('core')->currency($_product->getFinalPrice(),true,false); ?></span> -->
 	  <?php endif;?>
       </div>
       
