--- a/app/design/frontend/creo/default/template/catalog/product/view/addtocart.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view/addtocart.phtml
@@ -45,6 +45,10 @@
             <input type="text" pattern="\d*" name="qty" id="qty" maxlength="12" value="<?php echo max($this->getProductDefaultQty() * 1, 1) ?>" title="<?php echo $this->__('Qty') ?>" class="input-text qty" />
         </div><?php */?>
         <?php endif; ?>
+        <div class="fancy-product-price">
+          <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(),true,false); ?></span>
+      </div>
+
         <div class="add-to-cart-buttons btn-holder">
             <button type="button" title="<?php echo $buttonTitle ?>" class="button btn-cart" onclick="productAddToCartForm.submit(this)"><span class="span1"><span class="span2"><?php echo $buttonTitle ?></span></span></button>
             
