--- a/app/design/frontend/creo/default/template/wishlist/view.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/view.phtml
@@ -79,8 +79,12 @@
             }
 
             function addAllWItemsToCart() {
-                calculateQty();
+                //calculateQty();
                 wishlistAllCartForm.form.submit();
+            }
+            function updateWishList() {
+
+                document.getElementById('wishlist-view-form').submit();
             }
         //]]>
         </script>
@@ -89,4 +93,5 @@
     <div class="buttons-set">
         <p class="back-link"><a href="<?php echo $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
     </div>
+
 <?php endif ?>
