footer newsletter placeholder

--- a/app/design/frontend/creo/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/creo/default/template/newsletter/subscribe.phtml
@@ -36,7 +36,7 @@ if(!Mage::getModel('core/cookie')->get('popup-shown')) { ?>
         <form action="<?php echo $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail" class="subscribe-form">
           <div class="block-content">
             <div class="input-box">
-              <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?php echo $this->__('Sign up for our newsletter') ?>" class="input-text required-entry validate-email email" />
+              <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?php echo $this->__('Sign up for our newsletter') ?>" class="input-text required-entry validate-email email"  />
             </div>
             <div class="actions">
               <button type="submit" title="<?php echo $this->__('Subscribe') ?>" class="button newslettersubscribe "><span><span><?php echo $this->__('Subscribe') ?></span></span></button>
@@ -63,7 +63,7 @@ if(!Mage::getModel('core/cookie')->get('popup-shown')) { ?>
 <form action="<?php echo $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail1" class="subscribe-form footer-form">
 		  <span class="title">Join us for 20% off your first order</span>
           <div class="form-row">
-            <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?php echo $this->__('Sign up for our newsletter') ?>" class="input-text required-entry validate-email email" />
+            <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?php echo $this->__('Sign up for our newsletter') ?>" class="input-text required-entry validate-email email" placeholder="<?php echo $this->__('Email Address') ?>" />
             <input type="submit" value="JOIN" class="button newslettersubscribe ">
           </div>
           
