Quick view issues.

--- a/app/design/frontend/creo/default/template/magpassion_quickview/quickview/catalog/product/view/media.phtml
+++ b/app/design/frontend/creo/default/template/magpassion_quickview/quickview/catalog/product/view/media.phtml
@@ -58,7 +58,7 @@
 
 <?php if (count($this->getGalleryImages()) > 0): ?>
 <div class="more-views">
-    <ul class="product-image-thumbs">
+    <ul class="product-image-thumbs slide-pagination">
     <?php $i=0; foreach ($this->getGalleryImages() as $_image): ?>
         <?php if ($this->isGalleryImageVisible($_image)): ?>
         <li>
