--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -3045,6 +3045,16 @@ div.fme-filter dd li{overflow: visible !important;}
 	color: #000;
 	font:12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
+
+.my-account .welcome-msg{
+	overflow: hidden;
+	border: 2px solid #d7d7d7;
+	padding: 10px 13px;
+	margin: 0 0 40px;
+	color: #000;
+	font:12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+
 .tab-content2 .welcome-msg h3{
 	margin: 0 0 10px;
 	border: none;
