--- a/app/design/frontend/creo/default/template/persistent/customer/form/register.phtml
+++ b/app/design/frontend/creo/default/template/persistent/customer/form/register.phtml
@@ -136,13 +136,13 @@
                                         <div class="col">
                         <label for="password" class="required"><em class="red marg-right">*</em><?php echo $this->__('Password') ?></label>
                         
-                            <input type="password" name="password" id="password" title="<?php echo $this->__('Password') ?>" class="input-text required-entry validate-password" />
+                            <input type="password" name="password" id="password" title="<?php echo $this->__('Password') ?>" class="input-text required-entry validate-password validate-alphanum" />
                        
                     </div>
                     <div class="col">
                         <label for="confirmation" class="required"><em class="red marg-right">*</em><?php echo $this->__('Confirm Password') ?></label>
                        
-                            <input type="password" name="confirmation" title="<?php echo $this->__('Confirm Password') ?>" id="confirmation" class="input-text required-entry validate-cpassword" />
+                            <input type="password" name="confirmation" title="<?php echo $this->__('Confirm Password') ?>" id="confirmation" class="input-text required-entry validate-cpassword validate-alphanum" />
                         
                     </div>
                 </div>
