Checkout title changes.

--- a/app/design/frontend/creo/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onestepcheckout.phtml
@@ -1,6 +1,6 @@
 
 <div class="checkout-heading clearfix">
-  <div class="cart-top-area">
+  <div class="cart-top-area clearfix">
     <h2>CHECKOUT</h2>
   </div>
 </div>
