--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -2393,10 +2393,11 @@ div.fme-filter dd li{overflow: visible !important;}
 .cart-top-area h2{
 	margin: 0;
 	color: #222;
-	font:28px/28px "Roboto Condensed", Helvetica, Arial, sans-serif;
+	font:35px/28px "Roboto Condensed", Helvetica, Arial, sans-serif;
 	float: left;
 	max-width: 50%;
 }
+	
 .cart-top-area .btn-holder {
 	overflow: hidden;
 	text-align: center;
@@ -2476,6 +2477,7 @@ div.fme-filter dd li{overflow: visible !important;}
 .cart-top-area{
 	padding-bottom: 10px;
 	padding-top: 10px;
+	border-bottom:3px solid #eee;
 }
 .cart-table-area table{
 	border-top: 3px solid #eee;
