login/registeration page issues

--- a/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
@@ -29,7 +29,12 @@
     <?php /*?><h2><?php echo $this->__('Forgot Your Password?') ?></h2><?php */?>
 <div class="form-holder login-sec forgot-sec">
     <div class="form-frame">
-<?php echo $this->getMessagesBlock()->toHtml() ?>
+<?php 
+	$urlString =  $_SERVER['REQUEST_URI'];
+	if(strpos($urlString,'login') == false) {
+    echo $this->getMessagesBlock()->toHtml();
+	}
+	?>	
 
 <form action="<?php echo $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
    
