--- a/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
@@ -49,6 +49,8 @@
             <?php else: ?>
                 <?php echo $this->__('Login'); ?>
             <?php endif; ?></h2>
+	
+<?php echo $this->getMessagesBlock()->toHtml() ?>
   <div class="form-holder login-sec col-sm-6 no-padding-left">
    <div class="form-frame">
     
