Login Page Issues.

--- a/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
@@ -49,7 +49,7 @@
             
             <?php echo $this->getChildHtml('form.additional.info'); ?>
        
-   <span class="required red"><?php echo $this->__('* Required Fields') ?></span>
+   <?php /*?><span class="required red"><?php echo $this->__('* Required Fields') ?></span><?php */?>
     <div class="submit-holder">
         <?php /*?><p class="back-link"><a href="<?php echo $this->helper('customer')->getLoginUrl() ?>"><small>&laquo; </small><?php echo $this->__('Back to Login') ?></a></p><?php */?>
         <button type="submit" title="<?php echo $this->__('Submit') ?>" class="button"><span><span><?php echo $this->__('Submit') ?></span></span></button>
