--- a/app/design/frontend/creo/default/template/persistent/customer/form/register.phtml
+++ b/app/design/frontend/creo/default/template/persistent/customer/form/register.phtml
@@ -167,7 +167,7 @@
                 <?php //echo $this->getChildHtml('persistent.remember.me'); ?>
             
             <?php //echo $this->getChildHtml('persistent.remember.me.tooltip'); ?>
-        <p class="required red no-margin"><?php echo $this->__('* Required Fields') ?></p>
+       <?php /*?> <p class="required red no-margin"><?php echo $this->__('* Required Fields') ?></p><?php */?>
         <div class="submit-holder">
             <?php /*?><p class="back-link"><a href="<?php echo $this->escapeUrl($this->getBackUrl()) ?>" class="back-link"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p><?php */?>
             <button type="submit" title="<?php echo $this->__('Register') ?>" class="button"><span><span><?php echo $this->__('Submit') ?></span></span></button>
