--- a/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
+++ b/app/design/frontend/creo/default/template/persistent/customer/form/login.phtml
@@ -93,7 +93,7 @@
                     
                     <?php // echo $this->getChildHtml('persistent.remember.me.tooltip'); ?>
                     
-				 <p class="required red"><?php echo $this->__('* Required Fields') ?></p>
+				 <?php /*?><p class="required red"><?php echo $this->__('* Required Fields') ?></p><?php */?>
                  
                  <?php /*?><a href="<?php echo $this->getForgotPasswordUrl() ?>" class="f-left"><?php echo $this->__('Forgot Your Password?') ?></a><?php */?>
                  
