--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/coupon.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/coupon.phtml
@@ -15,7 +15,7 @@
                 <?php if(strlen($this->getCouponCode())): ?>
                     &nbsp; <button type="button" title="<?php echo $this->__('Cancel Coupon') ?>" class="button left"  value="<?php echo $this->__('Cancel Coupon') ?>" id="coupon-cancel"><span><span><?php echo $this->__('Cancel Coupon') ?></span></span></button>
                 <?php endif;?>
-                <button type="button" title="<?php echo $this->__('Apply Coupon') ?>" class="button left" value="<?php echo $this->__('Apply Coupon') ?>" id="coupon-apply"><span><span><?php echo $this->__('Apply Coupon') ?></span></span></button>
+                <button type="button" title="<?php echo $this->__('APPLY PROMO CODE') ?>" class="button left" value="<?php echo $this->__('APPLY PROMO CODE') ?>" id="coupon-apply"><span><span><?php echo $this->__('APPLY PROMO CODE') ?></span></span></button>
             </div>
         </div>
 </div>
