--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/review.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/review.phtml
@@ -40,7 +40,7 @@
       
       <!-- Heard Us -->
        
-      <button type="submit" title="<?php echo $this->__('Place Order Now') ?>" class="button btn-checkout" onclick="checkout.save(); return false;"><?php echo $this->__('Place Order Now') ?></button>
+      <button type="submit" title="<?php echo $this->__('Place Order') ?>" class="button btn-checkout" onClick="checkout.save(); return false;"><?php echo $this->__('Place Order') ?></button>
       <span id="review-please-wait" style="display:none;float:right;"> <img src="<?php echo $this->getSkinUrl('images/onestepcheckout/opc-ajax-loader_onestepcheckout.gif') ?>" alt="<?php echo $this->__('Submitting order information...') ?>" title="<?php echo $this->__('Submitting order information...') ?>" class="v-middle" /> <?php echo $this->__('Submitting order information...') ?> </span> </div>
   </div>
 </div>
