--- a/app/design/frontend/creo/default/template/checkout/onepage/review/totals.phtml
+++ b/app/design/frontend/creo/default/template/checkout/onepage/review/totals.phtml
@@ -36,7 +36,7 @@
     <?php if ($this->needDisplayBaseGrandtotal()):?>
     <tr>
         <td class="a-right" colspan="<?php echo $_colspan; ?>">
-            <small><?php echo $this->helper('sales')->__('Your credit card will be charged for') ?></small>
+            <small><?php //echo $this->helper('sales')->__('Your credit card will be charged for') ?></small>
         </td>
         <td class="a-right">
             <small><?php echo $this->displayBaseGrandtotal() ?></small>
